[package]
name = "fibers_inotify"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A futures friendly inotify wrapper for fibers crate"
homepage = "https://github.com/sile/fibers_inotify"
repository = "https://github.com/sile/fibers_inotify"
readme = "README.md"
keywords = ["inotify"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/fibers_inotify"}
codecov = {repository = "sile/fibers_inotify"}

[dependencies]
fibers = "0.1"
futures = "0.1"
inotify = "0.5"
inotify-sys = "0.1"
libc = "0.2"
mio = "0.6"
trackable = "0.2"

[dev-dependencies]
clap = "2"